@@ -1,0 +1,102 @@
+--[[
+
+	AtlasQuest, a World of Warcraft addon.
+	Email me at mystery8@gmail.com
+
+	This file is part of AtlasQuest.
+
+	AtlasQuest is free software; you can redistribute it and/or modify
+	it under the terms of the GNU General Public License as published by
+	the Free Software Foundation; either version 2 of the License, or
+	(at your option) any later version.
+
+	AtlasQuest is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+	GNU General Public License for more details.
+
+	You should have received a copy of the GNU General Public License
+	along with AtlasQuest; if not, write to the Free Software
+	Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
+
+--]]
+
+
+-- Storing Quest ID numbers in here for future usage.
+
+
+
+
+----------------------------------------------
+---------------- DUNGEONS --------------------
+----------------------------------------------
+
+
+
+
+--------------- INST1 - Deadmines (VC) ---------------
+
+Inst1Quest1_QuestID = "214"
+Inst1Quest1_QuestLink = "|cffffff00|Hquest:214:17|h[Red Silk Bandanas]|h|r"
+
+Inst1Quest2_QuestID = "168"
+Inst1Quest2_QuestLink = "|cffffff00|Hquest:168:18|h[Collecting Memories]|h|r"
+
+Inst1Quest3_QuestID = "167"
+Inst1Quest3_QuestLink = "|cffffff00|Hquest:167:20|h[Oh Brother. . .]|h|r"
+
+Inst1Quest4_QuestID = "2040"
+Inst1Quest4_QuestLink = "|cffffff00|Hquest:2040:20|h[Underground Assault]|h|r"
+
+Inst1Quest5_QuestID = "166"
+Inst1Quest5_QuestLink = "|cffffff00|Hquest:166:22|h[The Defias Brotherhood]|h|r"
+
+Inst1Quest6_QuestID = "1654"
+Inst1Quest6_QuestLink = "|cffffff00|Hquest:1654:22|h[The Test of Righteousness]|h|r"
+
+Inst1Quest7_QuestID = "373"
+Inst1Quest7_QuestLink = "|cffffff00|Hquest:373:22|h[The Unsent Letter]|h|r"
+
+
+
+--------------- INST2 - Wailing Caverns (WC) ---------------
+
+Inst2Quest1_QuestID = "1486"
+Inst2Quest1_QuestLink = "|cffffff00|Hquest:1486:17|h[Deviate Hides]|h|r"
+
+Inst2Quest2_QuestID = "959"
+Inst2Quest2_QuestLink = "|cffffff00|Hquest:959:18|h[Trouble at the Docks]|h|r"
+
+Inst2Quest3_QuestID = "1491"
+Inst2Quest3_QuestLink = "|cffffff00|Hquest:1491:18|h[Smart Drinks]|h|r"
+
+Inst2Quest4_QuestID = "1487"
+Inst2Quest4_QuestLink = "|cffffff00|Hquest:1487:21|h[Deviate Eradication]|h|r"
+
+Inst2Quest5_QuestID = "6981"
+Inst2Quest5_QuestLink = "|cffffff00|Hquest:6981:26|h[The Glowing Shard]|h|r"
+
+Inst2Quest1_HORDE_QuestID = "1486"
+Inst2Quest1_HORDE_QuestLink = "|cffffff00|Hquest:1486:17|h[Deviate Hides]|h|r"
+
+Inst2Quest2_HORDE_QuestID = "959"
+Inst2Quest2_HORDE_QuestLink = "|cffffff00|Hquest:959:18|h[Trouble at the Docks]|h|r"
+
+Inst2Quest3_HORDE_QuestID = "962"
+Inst2Quest3_HORDE_QuestLink = "|cffffff00|Hquest:962:18|h[Serpentbloom]|h|r"
+
+Inst2Quest4_HORDE_QuestID = "1491"
+Inst2Quest4_HORDE_QuestLink = "|cffffff00|Hquest:1491:18|h[Smart Drinks]|h|r"
+
+Inst2Quest5_HORDE_QuestID = "1487"
+Inst2Quest5_HORDE_QuestLink = "|cffffff00|Hquest:1487:21|h[Deviate Eradication]|h|r"
+
+Inst2Quest6_HORDE_QuestID = "914"
+Inst2Quest6_HORDE_QuestLink = "|cffffff00|Hquest:914:22|h[Leaders of the Fang]|h|r"
+
+Inst2Quest7_HORDE_QuestID = "6981"
+Inst2Quest7_HORDE_QuestLink = "|cffffff00|Hquest:6981:26|h[The Glowing Shard]|h|r"
+
+
+
+--------------- INST3 - Ragefire Chasm (RFC) ---------------
