@@ -3004,7 +3004,7 @@ Inst13Quest8 = "8. Seed of Life"
 Inst13Quest8_Level = "51"
 Inst13Quest8_Attain = "39"
 Inst13Quest8_Aim = "Seek out Remulos in Moonglade and give him the Seed of Life."
-Inst13Quest8_Location = "Zaetars Ghost (Maraudon; "..YELLOW.."[11]"..WHITE..")"
+Inst13Quest8_Location = "Zaetar's Spirit (Maraudon; "..YELLOW.."[11]"..WHITE..")"
 Inst13Quest8_Note = "Zaetars Ghost appears after killing Princess Theradras "..YELLOW.."[11]"..WHITE..". You find Keeper Remulos at (Moonglade - Shrine of Remulos; "..YELLOW.."36,41"..WHITE..")."
 Inst13Quest8_Prequest = "Yes, Corruption of Earth and Seed"
 Inst13Quest8_Folgequest = "No"
